--- a/src/app/modules/result-exam/container/resultexam.component.html
+++ b/src/app/modules/result-exam/container/resultexam.component.html
@@ -1,5 +1,11 @@
 <div class="text-center p-4">
+  <!-- Display current sum when it's not null -->
   <p *ngIf="sum !== null" class="text-lg font-semibold">
     Current Sum: <span class="text-blue-500">{{ sum }}</span>
+  </p>
+
+  <!-- Optionally, display subSum if you want to show the temporary sum -->
+  <p *ngIf="subSum !== null" class="text-lg font-semibold">
+    Temporary Sum: <span class="text-green-500">{{ subSum }}</span>
   </p>
 </div>
